--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -32,14 +32,44 @@
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
-                <form>
+                <form id="form">
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
+                        <label for="date">Enter Search Criteria</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
                     </ul>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="defaultCheckDate" checked>
+                    <label class="form-check-label" for="defaultCheckDate">
+                      date/time
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="cityCheck">
+                    <label class="form-check-label" for="cityCheck">
+                      city
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="stateCheck">
+                    <label class="form-check-label" for="stateCheck">
+                      state
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="countryCheck">
+                    <label class="form-check-label" for="countryCheck">
+                      country
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="shapeCheck">
+                    <label class="form-check-label" for="shapeCheck">
+                      shape
+                    </label>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
